syntax = "proto3";

message Transfer {
  string accountId = 2;
  string recipient = 3;
  string title = 4;
  float amount = 5;
  string cardId = 6;
  string paymentId = 7;
}